# odc-job-driver

dap-lite/: README.md  environment.yml  pyproject.toml
dap-lite/examples/: main.py  process_product.py
dap-lite/src/dap_lite/: __init__.py  constants.py  driver.py  driver_protocol.py  logger.py  mock_driver.py  server.py  workflow_step.py
dap-lite/src/dap_lite/sql/: get-next-job-v2.sql  odc-db-additions.sql  odc-db-bnp-log.sql  purge_product_and_datasets.sql  setup_smoke_test.py
dap_gui/: Dockerfile  Makefile  docker_compose.yml  environment.yml  patch_botocore.py  sentinel2.py  sentinel2_tiles.json  server.py
dap_gui/.devcontainer/default/: devcontainer.json
