[tool.poetry]
name = "dap-lite"
version = "0.1.0"
description = "Lite version of dap to drive processing pipelines"
authors = ["Daniel Flemstrom <daniel.flemstrom@ri.se>"]
readme = "README.md"
packages = [
    { include = "dap_lite", from = "src" }
]
[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
